Revision history for Datahub-Factory

{{$NEXT}}

    - Changed: generate README.md from separate POD documentation.
    - Proposed fix for missing prereqs as reported by CPANTS.
    - Fixed #51: Non-existing pipeline.ini should return proper error message. 
    - Added: documentation for the Datahub::Factory::Flash command.
    - Added: documentation for the Index command.

1.72  2017-10-06 15:19:32 CEST

    - Changed: removed conf folder.
    - Changed: removed documentation folder.
    - Added: .perltidyrc and .tidyallrc
    - Changed: flexible configuration based on a local datahubfactory.yml file.
    - Changed: fixes #48 Log4perl throws forgot to call init() error.
    - Changed: processing the output of the Solr indexer. Added error handling.
    - Added: dhconveyor index command with a basic Solr indexer.
    - Changed: Pipeline configuration is now polymorphic to cater different pipeline formats.
    - Fixed: missing Log::Any::Adapter::Log4perl dependency.

1.71  2017-09-06 10:54:08 CEST

    - Fixed: Licensing via GPv3 on milla release.
    - Fixed: missing Moose::Role.

1.70  2017-09-05 14:03:04 CEST

    - Changed: improved milla / dzil release flow.
    - Added: missing dependencies for testing in cpanfile.
    - Added: first iteration for .travis.yml file.
    - Changed: Clean up use imports for all modules.
    - Changed: Moved dhconveyor executable from script/ to bin/ directory for Module::Build.
    - Changed: Use Module::Build instead of Module::Build::Tiny.
    - Changed: Removed non-used dependencies which should be resolved automatically.
    - Changed: Upgraded Catmandu 1.0602 to 1.0603.

1.6.1  2017-09-04 09:11:34 CEST

    - Fixed: faulty references to deprecated Datahub::Factory::PipelineConfig.

1.6  2017-08-29 17:00:28 CEST

    - Changed: condition property renamed to explicit condition_path.
    - Changed: id_path configuration now done in importer instead of fixer.